tests/typing/fail/multi_assign_star_lhs_fail2.rb

class A
  def am() end
end

a = A.new
*y = a,a

y[1].foo
